--- a/public/index.html
+++ b/public/index.html
@@ -309,7 +309,7 @@
             <a href="pharmaceutical.html">Pharmaceutical & Biotech Companies</a>
           </li>
           <li><a href="healtcare.html">Healthcare Professionals</a></li>
-          <li><a href="http://">Patient Groups</a></li>
+          <li><a href="patient_group.html">Patient Groups</a></li>
           <li><a href="http://">Patients</a></li>
         </ul>
       </div>
@@ -390,8 +390,8 @@
                       >Pharmaceutical & Biotech Companies</a
                     >
                   </li>
-                  <li><a href="">Healtcare Professionals</a></li>
-                  <li><a href="">Patient Groups</a></li>
+                  <li><a href="healtcare.html">Healtcare Professionals</a></li>
+                  <li><a href="patient_group.html">Patient Groups</a></li>
                   <li><a href="">Patients</a></li>
                 </ul>
               </div>
@@ -438,7 +438,7 @@
                 find medicines by connecting them with our specialist customer
                 services team, either online or by phone (and even fax).
               </p>
-              <input type="button" value="Find ou more" />
+              <input type="button" value="Find out more" />
             </li>
             <li>
               <img src="images/slides/boy-web_crop-min-1.jpg" />
@@ -500,7 +500,7 @@
               ></path>
             </svg>
           </div>
-          <a href="">Pharmaceutical and Biotech companies</a>
+          <a href="pharmaceutical.html">Pharmaceutical and Biotech companies</a>
         </div>
         <div class="sousSlider_M" id="sousSlider_M">
           <div class="div_sv">
@@ -515,7 +515,7 @@
               ></path>
             </svg>
           </div>
-          <a href="">Healthcare profesionnals</a>
+          <a href="healtcare.html">Healthcare profesionnals</a>
         </div>
         <div class="sousSlider_R" id="sousSlider_R">
           <div class="div_sv">
