--- a/public/patient_group.html
+++ b/public/patient_group.html
@@ -275,10 +275,10 @@
             <nav>
               <ul>
                 <li>
-                  <a href="mission.html" class="stayActif">Mission</a>
+                  <a href="mission.html">Mission</a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuHowCanWeHelp"
+                  <a href="javascript:" class="menuHowCanWeHelp stayActif"
                     >How we can help<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
@@ -313,7 +313,7 @@
             <a href="pharmaceutical.html">Pharmaceutical & Biotech Companies</a>
           </li>
           <li><a href="healtcare.html">Healthcare Professionals</a></li>
-          <li><a href="patient_group.html">Patient Groups</a></li>
+          <li><a href="http://">Patient Groups</a></li>
           <li><a href="http://">Patients</a></li>
         </ul>
       </div>
@@ -394,8 +394,8 @@
                       >Pharmaceutical & Biotech Companies</a
                     >
                   </li>
-                  <li><a href="healtcare.html">Healtcare Professionals</a></li>
-                  <li><a href="patient_group.html">Patient Groups</a></li>
+                  <li><a href="">Healtcare Professionals</a></li>
+                  <li><a href="">Patient Groups</a></li>
                   <li><a href="">Patients</a></li>
                 </ul>
               </div>
@@ -430,171 +430,207 @@
     </header>
     <!-------------------------- CONTENU ---------------------------->
     <main>
-      <div class="mainHeader">
-        <div class="mainHeader_containt">
-          <span>OUR MISSION</span>
-          <p>
-            RIGHT MEDICINE. <br />
-            RIGHT PATIENT. <br />
-            RIGHT TIME.
-          </p>
-          <input type="button" value="Our mission in 120 seconds" />
-        </div>
-        <!----------------------------------------------- MENU FIXED ----------------------------------->
-        <div class="menuFixed">
-          <ul>
-            <li><a href="javascript:">The Challenge</a></li>
-            <li><a href="javascript:">Right Medicine</a></li>
-            <li><a href="javascript:">Right Patient</a></li>
-            <li><a href="javascript:">Right Time</a></li>
-          </ul>
+      <div class="mainHeaderPatientGroup">
+        <div class="mainHeaderPatientGroup_contain">
+          <span>HOW WE CAN HELP</span>
+          <h3>PATIENT GROUPS</h3>
         </div>
       </div>
-      <!----------------------------------------------- TEXT 1 ----------------------------------->
-      <div class="mainText1">
-        <p>
-          We exist to make sure a healthcare professional with a patient in
-          need, anywhere in the world, can always get the right medicine for
-          their individual patient – quickly, easily and safely whether licensed
-          or unlicensed. <br />
-          <br />
-          Population growth, an increasingly elderly population, growing
-          incidences of chronic diseases and rare or orphan medicines,
-          increasing patient knowledge, and concerns around counterfeit
-          medicines are all driving increasing demand for quality medicines
-          which are not available at the ‘point of care’.
-        </p>
-        <input type="button" value="Get in touch" />
+      <!----------------------------------------------- MENU FIXED ----------------------------------->
+      <div class="menuFixedPatientGroup">
+        <ul>
+          <li><a href="javascript:">Introduction</a></li>
+          <li><a href="javascript:">Key facts</a></li>
+          <li><a href="javascript:">How we can help</a></li>
+        </ul>
       </div>
-      <!----------------------------------------------- RIGH MEDICINE ----------------------------------->
-      <div class="rightMedicine">
-        <div class="rightMedicine_container">
-          <div class="rightMedicine_L">
-            <div class="fullMember"></div>
-            <div class="asop"></div>
-            <div class="european"></div>
-          </div>
-          <div class="rightMedicine_R">
-            <h3>RIGHT MEDICINE</h3>
+      <!------------------------------------------------------------------ CONTENU ------------------------------------------------------------------>
+      <div class="containerPatientGroup">
+        <div class="contain_L">
+          <div class="contain_L_1">
+            <h3>INTRODUCTION</h3>
+            <h4>
+              At Clinigen, we are committed to getting the right medicine to the
+              right patient at the right time. It is therefore natural that part
+              of our work focuses on engagement with patient advocacy groups,
+              listening to their needs, learning from them, and engaging to
+              educate and empower on the topic of access to medicines,
+              specifically those that are hard to obtain, but which address an
+              unmet medical need.
+            </h4>
             <p>
-              We provide access to our own and other pharmaceutical companies'
-              products, whether to meet unmet medical needs or for use in
-              clinical trials. This includes providing access to medicines that
-              have received regulatory approval, but may not be available in a
-              specific patient’s own country (‘unlicensed’ medicines). <br />
-              <br />
-              Ethical unlicensed access helps protect patients from the growing
-              threat of counterfeit medicines distributed online.
+              This can be an area that is not given much focus, or has low
+              awareness amongst the many priorities of a busy advocacy
+              organisation, but nonetheless it is an important part of the
+              armoury required to face the access challenges that exist in
+              today’s healthcare systems.
             </p>
-            <a href="http://"
-              >How we can help pharmaceutical and biotech companies</a
-            >
-            <a href="http://">How we can help healthcare professionals</a>
           </div>
-        </div>
-      </div>
-      <!----------------------------------------------- RIGH PATIENT ----------------------------------->
-      <div class="rightPatient">
-        <div class="rightPatient_container">
-          <div class="rightPatient_L">
-            <h3>RIGHT PATIENT</h3>
+          <div class="contain_L_2">
+            <h3>KEY FACTS</h3>
             <p>
-              Clinigen is dedicated to providing an ethical, compliant route for
-              healthcare professionals to source medicines. <br /><br />
-              Whether a medicine is unlicensed in a given country, not yet
-              commercially available, is experiencing a supply disruption, or is
-              discontinued, we can help. Our expertise in this area extends not
-              just across the entire commercial lifecycle of a product, but to
-              pre- and post-commercial stages too.
+              Clinigen proudly supports a number of patient groups and
+              associations. See below for a list of organisations that we
+              currently support:
             </p>
-            <a href="http://">How we can help healthcare professionals</a>
-            <a href="http://">How we can help patients</a>
+            <a href="#">EURORDIS</a>
+            <br />
+            <a href="#">Cancer52</a>
           </div>
-          <div class="rightPatient_R">
-            <img src="./images/keyfact.JPG" alt="" />
-            <h4>KEY FACTS</h4>
-            <div class="listCards">
-              <div class="keyFacts_Card">
-                <span class="cible"> 6000</span>
-                <p>
-                  over 6,000 HCPs use Clinigen to access unlicensed medicines
-                </p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="moitie"> 30+</span>
-                <p>
-                  years' experience as the global leader in providing access to
-                  medicines
-                </p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="pizza"> 1,700</span>
-                <p>
-                  provided access to 1,700 different unlicensed medicines across
-                  111 countries in 2017
-                </p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="ppl"> 3.5m+</span>
-                <p>3.5m+ units shipped for patient treatment per year</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!----------------------------------------------- RIGH TIME ----------------------------------->
-      <div class="rightTime">
-        <div class="rightTime_container">
-          <div class="rightTime_L">
-            <img src="./images/keyfact.JPG" alt="" />
-            <h4>KEY FACTS</h4>
-            <div class="listCards">
-              <div class="keyFacts_Card">
-                <span class="cible"> 9.5m</span>
-                <p>units shipped in the last 3 years</p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="earth"> 13</span>
-                <p>ocations around the globe</p>
-              </div>
-              <div class="keyFacts_Card">
-                <span class="moitie"> 130</span>
-                <p>shipped to 130 countries in the last 3 years</p>
-              </div>
-            </div>
-          </div>
-          <div class="rightTime_R">
-            <h3>RIGHT TIME</h3>
+          <div class="contain_L_3">
+            <h3>HOW WE CAN HELP</h3>
+
             <p>
-              The patient is central to everything we do day-to-day. Often if
-              they are using one of our niche or unlicensed medicines it is
-              because they have failed to respond to front line therapies or
-              have a rare or difficult to treat condition. Shortages and delays
-              can be life-threatening. <br />
-              <br />
-              In a similar way, if a comparator medicine is unavailable for a
-              clinical trial, progress in developing new treatments can be
-              significantly delayed. <br />
-              <br />
-              We don’t just help make medicines available, we get them to the
-              people who need them. All over the world and however challenging
-              the circumstances.
+              Every year, thousands of patients and care givers across the globe
+              face the dire situation of discovering that the medicine they need
+              is unavailable to them. It could be that it is still in
+              development, a discontinued line, or simply unavailable in the
+              country they reside in.
             </p>
-            <a href="http://">Read more about our operational expertise</a>
+            <p>
+              In these difficult times, patient advocacy groups can play a
+              critical role as a trusted resource for their patients, providing
+              timely and accurate information about the process for accessing
+              unlicensed medicines, and explaining the roles of all the
+              different stakeholders involved.
+            </p>
+            <p>
+              If you are a patient group representative and would like to
+              understand more about ethical, compliant routes that a physician
+              can utilise to access an unlicensed medicine on behalf of his/her
+              patient, and explore what your role in that might be, please get
+              in touch with us on patientadvocacy@clinigengroup.com. We would
+              love to hear from you!
+            </p>
           </div>
-        </div>
-      </div>
-      <!----------------------------------------------- RELATED LINKS ----------------------------------->
-      <div class="relatedLinks">
-        <div class="relatedLinks_container">
-          <h3>RELATED LINKS</h3>
-          <div>
+          <div class="relatedLinksPatientGroup">
+            <h4>RELATED LINKS</h4>
             <ul>
-              <li><a href="http://">Pharmaceuticals & Biotech companies</a></li>
-              <li><a href="http://">Healthcare Professionals</a></li>
-              <li><a href="http://">Patient Groups</a></li>
-              <li><a href="http://">Patients</a></li>
+              <li><a href="#">About Clinigen</a></li>
+              <li><a href="#">Mission</a></li>
             </ul>
+          </div>
+        </div>
+        <div class="contain_R">
+          <!--------------------------------------- FORMULAIRE ------------------------------------------------>
+          <div class="formulaire">
+            <div class="formulaire_titre">
+              <span class="formulaire_imgLettre"></span>
+              <h4 class="formulaire_t">Get in touch</h4>
+            </div>
+            <form action="">
+              <span class="formulaire_libelle">* Mandatory field</span>
+              <input
+                type="text"
+                name="Name Surname"
+                id="inputName"
+                placeholder="Name Surname*"
+                class="formulaire_input"
+              />
+              <input
+                type="text"
+                name="your@email.com"
+                id="inputMail"
+                placeholder="your@email.com*"
+                class="formulaire_input"
+              />
+              <input
+                type="text"
+                name="Organisation"
+                id="inputOrg"
+                placeholder="Organisation*"
+                class="formulaire_input"
+              />
+              <input
+                type="text"
+                name="Contact no."
+                id="inputNumber"
+                placeholder="Contact no.*"
+                class="formulaire_input"
+              />
+              <span class="formulaire_sousTitre"
+                >Reason for enquiry (select one)</span
+              >
+              <!------------------------------------ COMBO 1 ------------------------------------------>
+              <div class="formulaire_input formulaire_combo1">
+                I am a healtcare professional...
+              </div>
+              <div class="formulaire_sousMenu1">
+                <ul>
+                  <li class="formulaire_option1">
+                    I am a healtcare professional...
+                  </li>
+                  <li class="formulaire_option1">Looking for a medicine</li>
+                  <li class="formulaire_option1">
+                    Trying to resolve a medicine shortage (EU and US)
+                  </li>
+                  <li class="formulaire_option1">
+                    Trying to resolve a medicine shortage (Asia, Australia)
+                  </li>
+                  <li class="formulaire_option1">
+                    With a medical information enquiry
+                  </li>
+                  <li class="formulaire_option1">
+                    Who would like to request a MSL visit
+                  </li>
+                </ul>
+              </div>
+              <!------------------------------------ COMBO 2 ------------------------------------------>
+              <div class="formulaire_input formulaire_combo2">
+                I am an industry professional...
+              </div>
+              <div class="formulaire_sousMenu2">
+                <ul>
+                  <li class="formulaire_option2">
+                    I am an industry professional...
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with biological sample management
+                  </li>
+                  <li class="formulaire_option2">
+                    looking for support with clinigcal trial comparator sourcing
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with clinical trial services
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with early access / named patient
+                    medicine supply
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with managing a mature product portfolio
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with unlicensied supply of medicine into
+                    new markets
+                  </li>
+                  <li class="formulaire_option2">
+                    Looking for support with commercial partnerships
+                    (in-licensing/out-licensing)
+                  </li>
+                </ul>
+              </div>
+              <!------------------------------------ COMBO 3 ------------------------------------------>
+              <div class="formulaire_input formulaire_combo3">
+                I have general questions about...
+              </div>
+              <div class="formulaire_sousMenu3">
+                <ul>
+                  <li class="formulaire_option3">
+                    I have general questions about...
+                  </li>
+                  <li class="formulaire_option3">Customer service</li>
+                  <li class="formulaire_option3">Investor relations</li>
+                  <li class="formulaire_option3">Invoicing/finance</li>
+                </ul>
+              </div>
+              <textarea name="Your message" id=""> </textarea>
+              <input
+                type="button"
+                value="Submit query"
+                class="formulaire_btn"
+              />
+            </form>
           </div>
         </div>
       </div>
@@ -676,10 +712,10 @@
       </div>
     </footer>
     <script src="src/js/header.js"></script>
-    <script src="src/js/mission.js"></script>
-    <script src="src/js/missionClick.js"></script>
     <script src="src/js/hamburger.js"></script>
     <script src="src/js/input.js"></script>
+    <script src="src/js/patient_group.js"></script>
+    <script src="src/js/healtcare_combo.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
