--- a/public/pharmaceutical.html
+++ b/public/pharmaceutical.html
@@ -313,7 +313,7 @@
             <a href="pharmaceutical.html">Pharmaceutical & Biotech Companies</a>
           </li>
           <li><a href="healtcare.html">Healthcare Professionals</a></li>
-          <li><a href="http://">Patient Groups</a></li>
+          <li><a href="patient_group.html">Patient Groups</a></li>
           <li><a href="http://">Patients</a></li>
         </ul>
       </div>
@@ -394,8 +394,8 @@
                       >Pharmaceutical & Biotech Companies</a
                     >
                   </li>
-                  <li><a href="">Healtcare Professionals</a></li>
-                  <li><a href="">Patient Groups</a></li>
+                  <li><a href="healtcare.html">Healtcare Professionals</a></li>
+                  <li><a href="patient_group.html">Patient Groups</a></li>
                   <li><a href="">Patients</a></li>
                 </ul>
               </div>
